# pmp-iq

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.distributed.yml  docker-compose.single.yml  docker-compose.yml
assets/: ai-profiles.js  app.js  entity-kinds.js  entity-properties.js  extraction-prompts.js  gamification.js  job-detail.js  jobs.js  local-table.js  platform-api.js  platform-app-agent.js  platform-app-ask.js  platform-app-detail.js  platform-app-files.js  platform-app-hints.js  platform-ask.js  platform-c4.js  platform-campaigns.js  platform-cost.js  platform-dashboard.js  platform-detail.js  platform-dora.js  platform-graph.js  platform-list.js  platform-scorecard.js  platform-trends.js  remediation.js  semantic.js  settings.js  teams.js  tech-radar.js  timeline.js
docs/: README.md  milestone-00-foundation.md  milestone-01-database-and-migrations.md  milestone-02-http-and-static-assets.md  milestone-03-authentication.md  milestone-04-settings-repository-accounts.md  milestone-05-settings-ai-agent-profiles.md  milestone-06-jobs-infrastructure.md  milestone-07-review-repositories-cloning.md  milestone-08-review-repositories-analysis.md  milestone-09-platform-tables.md  milestone-10-platform-graph.md  milestone-11-hardening-and-docs.md  milestone-12-distributed-locks.md  milestone-13-job-scheduling-workspaces-and-live-updates.md  milestone-14-llm-repository-request-job.md  milestone-15-application-llm-qa.md  milestone-16-llm-hints-for-application-entities.md  milestone-17-file-attribution-and-explorer.md  milestone-18-config-file.md  milestone-19-redis-distributed-lock.md  milestone-20-docker-compose-topologies.md  milestone-21-github-login.md  milestone-22-application-ai-agent-tasks.md  milestone-23-multi-repo-agent-tasks.md  milestone-24-pr-watcher-polling.md  milestone-25-webhooks.md  milestone-26-catalog-nl-query.md  milestone-27-configurable-job-concurrency.md  milestone-28-codebase-maps.md  milestone-29-c4-model.md  milestone-30-batch-changes.md  milestone-31-quality-metrics.md  milestone-32-platform-dashboard.md  milestone-33-expanded-metrics.md  milestone-34-configurable-extraction-prompts.md  milestone-35-metric-trends-and-charts.md  milestone-36-platform-diff-timeline-audit.md  milestone-37-rbac-teams-multitenant.md  milestone-38-c4-container-component-levels.md  (+9 more)
src/: app.rs  appsettings.rs  c4.rs  codebase_map.rs  config.rs  crypto.rs  dashboard.rs  error.rs  fs.rs  git.rs  httpclient.rs  incremental.rs  lib.rs  main.rs  nl_query.rs  pr_watcher.rs  process.rs  store.rs  strings.rs  telemetry.rs  workspace.rs
templates/: _login_form.html  _platform_tabs.html  audit.html  base.html  c4.html  campaigns.html  dashboard.html  home.html  job_detail.html  jobs.html  leaderboard.html  login.html  platform.html  platform_app_detail.html  platform_detail.html  platform_graph.html  platform_list.html  remediation.html  settings.html  tech_radar.html
tests/: accounts_repository.rs  agent_tasks_api.rs  agent_tasks_pg.rs  c4.rs  (+53 more)
(+219 files in other folders)
